exercise rails task manager ok

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+ .container {
+  width: 600px;
+  margin: 0 auto;
+ }
+
+ .list {
+  list-style: none;
+  text-decoration: none !important;
+ }
