--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,3 @@
-<!-- app/views/tasks/new.html.erb -->
-
 <%= form_with model: @task do |f| %>
   <div class="form-group">
     <%= f.label :title %>
@@ -8,6 +6,12 @@
   <div class="form-group">
     <%= f.label :details %>
     <%= f.text_field :details, class: 'form-control' %>
+  </div>
+  <div class="form-check mt-3">
+    <label class="form-check-label">
+    <%= f.check_box :completed, class: 'form-check-input' %>
+      Completed
+    </label>
   </div>
   <div class="mt-3">
     <%= f.submit %>
